Create controller for triggers and status triggers
