# src/main/java/org/bitebuilders/model/Trigger.java
@@ -1,13 +1,16 @@
 package org.bitebuilders.model;
 
 import lombok.Getter;
+import lombok.Setter;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.relational.core.mapping.Column;
 import org.springframework.data.relational.core.mapping.Table;
 
 import java.time.OffsetDateTime;
+import java.util.Map;
 
 @Getter
+@Setter
 @Table("triggers")
 public class Trigger {
     @Id
@@ -19,8 +22,8 @@ public class Trigger {
     @Column("type")
     private String type;
 
-    @Column("created_at")
-    private String parameters; // Или JsonNode
+    @Column("parameters")
+    private Map<String, Object> parameters;
 
     @Column("created_at")
     private OffsetDateTime createdAt;
